--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     
     <div class="dashboard">
         <div class="chart">
-            <img src="images/Crosssins.png" alt="Grafik 1">
+            <img src="public-repo/images/Crosssins.png" alt="Grafik 1">
         </div>
         <div class="chart">
             <img src="images/speedometer.png" alt="Grafik 2">
