--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
             <img src="public-repo/images/Crosssins.png" alt="Grafik 1">
         </div>
         <div class="chart">
-            <img src="images/speedometer.png" alt="Grafik 2">
+            <img src="public-repo/images/speedometer.png" alt="Grafik 2">
         </div>
         <div class="chart">
-            <img src="images/Modal_split.png" alt="Grafik 3">
+            <img src="public-repo/images/Modal_split.png" alt="Grafik 3">
         </div>
         <div class="chart">
             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/Yahoo_Transparency_Report_2013.gif" alt="Grafik 4">
