--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
         }
         header {
             text-align: center;
-            padding: 15px;
-            background-color: #f8f9fa;
-            color: #333;
+            padding: 20px;
+            background-color: #007bff;
+            color: white;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
         .dashboard {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
+            display: flex;
+            flex-wrap: wrap;
             gap: 15px;
-            padding: 15px;
+            padding: 20px;
             flex: 1;
             max-height: calc(100vh - 100px);
             overflow: hidden;
@@ -39,27 +40,39 @@
             background-color: white;
             border-radius: 8px;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
             overflow: hidden;
+            flex: 1 1 calc(50% - 30px);
+            max-width: calc(50% - 30px);
         }
         .chart img {
             max-width: 100%;
             max-height: 100%;
             object-fit: contain;
         }
+        .chart h2 {
+            margin: 10px 0;
+            font-size: 1.2em;
+            color: #333;
+        }
         footer {
             background-color: #333;
             color: #fff;
             text-align: center;
-            padding: 10px;
+            padding: 15px;
             font-size: 0.8em;
+            box-shadow: 0 -4px 6px rgba(0,0,0,0.1);
         }
         @media (max-width: 768px) {
             .dashboard {
-                grid-template-columns: 1fr;
-                max-height: none;
+                flex-direction: column;
+                align-items: center;
+            }
+            .chart {
+                flex: 1 1 calc(100% - 30px);
+                max-width: calc(100% - 30px);
             }
         }
     </style>
@@ -68,22 +81,26 @@
     <header>
         <h1>Daten des Mobilitätsknoten hi Harbach</h1>
     </header>
-    
+
     <div class="dashboard">
         <div class="chart">
+            <h2>Fußgänger-Überquerungen</h2>
             <img src="public-repo/images/Crosswalks.png" alt="Grafik 1">
         </div>
         <div class="chart">
+            <h2>Durchschnittliche Geschwindigkeit</h2>
             <img src="public-repo/images/speedometer.png" alt="Grafik 2">
         </div>
         <div class="chart">
+            <h2>Modal Split</h2>
             <img src="public-repo/images/Modal_split.png" alt="Grafik 3">
         </div>
         <div class="chart">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/Yahoo_Transparency_Report_2013.gif" alt="Grafik 4">
+            <h2>Platzhalter</h2>
+            <img src="placeholder" alt="Grafik 4">
         </div>
     </div>
-    
+
     <footer>
         © 2024 Stadt Klagenfurt
     </footer>
