--- a/index.html
+++ b/index.html
@@ -4,97 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Harbach</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        html, body {
-            height: 100%;
-            overflow-x: hidden;
-        }
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            background-color: #f4f4f4;
-        }
-        header {
-            text-align: center;
-            padding: 15px;
-            background-color: #007bff;
-            color: white;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-        }
-        .dashboard {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 15px;
-            padding: 15px;
-            flex: 1;
-            max-height: calc(100vh - 100px);
-            overflow: hidden;
-        }
-        .chart {
-            background-color: white;
-            border-radius: 8px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            overflow: hidden;
-            height: 300px; /* Angepasste Höhe für die Diagramme */
-        }
-        .chart img {
-            max-width: 100%;
-            max-height: 100%;
-            object-fit: contain;
-        }
-        .chart h2 {
-            margin: 10px 0;
-            font-size: 1.1em; /* Angepasste Schriftgröße */
-            color: #333;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px;
-            font-size: 0.8em;
-            box-shadow: 0 -4px 6px rgba(0,0,0,0.1);
-        }
-        @media (max-width: 768px) {
-            .dashboard {
-                grid-template-columns: 1fr;
-                max-height: none;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Daten des Mobilitätsknoten hi Harbach</h1>
+        <h1>Daten des Mobilitätsknoten Harbach</h1>
     </header>
 
-    <div class="dashboard">
-        <div class="chart">
+    <main class="dashboard">
+        <section class="chart">
             <h2>Fußgänger-Überquerungen</h2>
-            <img src="public-repo/images/Crosswalks.png" alt="Grafik 1">
-        </div>
-        <div class="chart">
+            <img src="public-repo/images/Crosswalks.png" alt="Bild von Fußgänger-Überquerungen">
+        </section>
+        <section class="chart">
             <h2>Durchschnittliche Geschwindigkeit</h2>
-            <img src="public-repo/images/speedometer.png" alt="Grafik 2">
-        </div>
-        <div class="chart">
+            <img src="public-repo/images/speedometer.png" alt="Bild von Durchschnittliche Geschwindigkeit">
+        </section>
+        <section class="chart">
             <h2>Modal Split</h2>
-            <img src="public-repo/images/Modal_split.png" alt="Grafik 3">
-        </div>
-        <div class="chart">
+            <img src="public-repo/images/Modal_split.png" alt="Bild von Modal Split">
+        </section>
+        <section class="chart">
             <h2>Platzhalter</h2>
-            <img src="placeholder" alt="Grafik 4">
-        </div>
-    </div>
+            <img src="placeholder" alt="Platzhalter Bild">
+        </section>
+    </main>
 
     <footer>
         © 2024 Stadt Klagenfurt
