--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     </main>
 
     <footer>
-        © 2024 Stadt Klagenfurt
+        © 2024 Stadt Klagenfurt <br/>
+        <br/>
+        Daten werden stündlich aktualisiert
     </footer>
 </body>
 </html>
