--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img src="public-repo/images/Modal_split.png" alt="Bild von Modal Split">
         </section>
         <section class="chart">
-            <h2>Platzhalter</h2>
+            <h2>Verkehrsaufkommen</h2>
             <img src="placeholder" alt="Platzhalter Bild">
         </section>
     </main>
