--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </section>
         <section class="chart">
             <h2>Verkehrsaufkommen</h2>
-            <img src="placeholder" alt="Platzhalter Bild">
+            <img src="public-repo/images/verkehrsaufkommen.png" alt="Verkehrsaufkommen">
         </section>
     </main>
 
