--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="dashboard">
         <section class="chart">
             <h2>Fußgänger-Überquerungen</h2>
-            <img src="public-repo/images/CrossingEvents.jpg" alt="Bild von Fußgänger-Überquerungen">
+            <img src="public-repo/images/CrossingEvents.png" alt="Bild von Fußgänger-Überquerungen">
         </section>
         <section class="chart">
             <h2>Durchschnittliche Geschwindigkeit</h2>
