--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
     <main class="dashboard">
         <section class="chart">
             <h2>Fußgänger-Überquerungen</h2>
-            <img src="public-repo/images/Crosswalks.png" alt="Bild von Fußgänger-Überquerungen">
+            <img src="Crosswalks.png" alt="Bild von Fußgänger-Überquerungen">
         </section>
         <section class="chart">
             <h2>Durchschnittliche Geschwindigkeit</h2>
-            <img src="public-repo/images/speedometer.png" alt="Bild von Durchschnittliche Geschwindigkeit">
+            <img src="speedometer.png" alt="Bild von Durchschnittliche Geschwindigkeit">
         </section>
         <section class="chart">
             <h2>Modal Split</h2>
-            <img src="public-repo/images/Modal_split.png" alt="Bild von Modal Split">
+            <img src="Modal_split.png" alt="Bild von Modal Split">
         </section>
         <section class="chart">
             <h2>Verkehrsaufkommen</h2>
-            <img src="public-repo/images/verkehrsaufkommen.png" alt="Verkehrsaufkommen">
+            <img src="verkehrsaufkommen.png" alt="Verkehrsaufkommen">
         </section>
     </main>
 
