--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <img src="Modal_split.png" alt="Bild von Modal Split">
         </section>
         <section class="chart">
-            <h2>Verkehrsaufkommen</h2>
-            <img src="verkehrsaufkommen.png" alt="Verkehrsaufkommen">
+            <h2>Gesamt Anzahl der Fahrzeuge pro Tag (7 Tage)</h2>
+            <img src="cars_total.png" alt="Gesamt Anzahl der Fahrzeuge pro Tag (7 Tage)">
         </section>
     </main>
 
