--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     </header>
 
     <main class="dashboard">
-        <section class="chart">
+        <section class="chart1">
             <h2>Fußgänger-Überquerungen</h2>
-            <img src="Crosswalks.png" alt="Bild von Fußgänger-Überquerungen">
+            <img src="C:\Users\KUS54\AppData\Roaming\JetBrains\PyCharmCE2023.2\scratches\Crosswalks.png" alt="Bild von Fußgänger-Überquerungen">
         </section>
-        <section class="chart">
+        <section class="chart2">
             <h2>Durchschnittliche Geschwindigkeit</h2>
-            <img src="speedometer.png" alt="Bild von Durchschnittliche Geschwindigkeit">
+            <img src="C:\Users\KUS54\AppData\Roaming\JetBrains\PyCharmCE2023.2\scratches\speedometer.png" alt="Bild von Durchschnittliche Geschwindigkeit">
         </section>
-        <section class="chart">
+        <section class="chart3">
             <h2>Modal Split</h2>
-            <img src="Modal_split.png" alt="Bild von Modal Split">
+            <img src="C:\Users\KUS54\AppData\Roaming\JetBrains\PyCharmCE2023.2\scratches\Modal_split.png" alt="Bild von Modal Split">
         </section>
-        <section class="chart">
+        <section class="chart4">
             <h2>Gesamt Anzahl der Fahrzeuge pro Tag (7 Tage)</h2>
-            <img src="cars_total.png" alt="Gesamt Anzahl der Fahrzeuge pro Tag (7 Tage)">
+            <img src="C:\Users\KUS54\AppData\Roaming\JetBrains\PyCharmCE2023.2\scratches\cars_total.png" alt="Platzhalter Bild">
         </section>
     </main>
 
