--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <footer>
         © 2024 Stadt Klagenfurt <br/>
         <br/>
-        Daten werden stündlich aktualisiert
+        Daten werden stündlich aktualisiert | Die hier bereitgestellten Daten enthalten möglicherweise Messfehler oder Daten die nicht vollständig oder aktuell sind.
     </footer>
 </body>
 </html>
